--- a/package.json
+++ b/package.json
@@ -6,10 +6,20 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "antd": "^5.20.2",
+    "axios": "^1.7.4",
+    "bootstrap": "^5.3.3",
+    "cors-anywhere": "^0.4.4",
+    "jquery": "^3.7.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-redux": "^5.1.1",
+    "react-scripts": "^2.1.8",
+    "reactstrap": "^6.5.0",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.16.2",
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.22"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,6 +43,10 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
+    ],
+    "proxy": "https://cors-anywhere.herokuapp.com/https://rem.dbwebb.se"
+  },
+  "devDependencies": {
+    "@types/reactstrap": "^6.4.4"
   }
 }
