--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,7 +15,7 @@
     "jquery": "^3.7.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-redux": "^5.1.1",
+    "react-redux": "^7.2.9",
     "react-scripts": "^2.1.8",
     "reactstrap": "^6.5.0",
     "redux": "^3.7.2",
